--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -1,104 +1,135 @@
 @MISC
 {
     Authd2002, 
-    AUTHOR    = "{Chun, B.}",
-    TITLE     = "``authd,'' http://www.theether.org/authd/",
+    AUTHOR      = {Brad Chun},
+    TITLE       = {{Authd}}, 
+    HOWPUBLISHED= {http://www.theether.org/authd/},
+    YEAR        = {2002},
 }
 
 @MISC
 {
     BlueGene2002, 
-    AUTHOR    = "Lawrence Livermore National Laborary (2003)",
-    TITLE     = "{``Blue/GeneL,'' http://www.llnl.gov/asci/platforms/bluegenel}",
+    AUTHOR      = {{{Lawrence Livermore National Laboratory}}},
+    TITLE       = {{Blue/GeneL}},
+    HOWPUBLISHED= {http://www.llnl.gov/asci/platforms/bluegenel},
+    YEAR        = {2003},
 }
 
 @MISC
 {
     DPCS2002, 
-    AUTHOR    = "Lawrence Livermore National Laborary (2001)",
-    TITLE     = "{``Distributed Production Control System (DPCS).'' 
-                 http://www.llnl.gov/icc/lc/dpcs/dpcs\_overview.html}",
+    AUTHOR      = {{Lawrence Livermore National Laboratory}},
+    TITLE       = {{Distributed Production Control System (DPCS).}},
+    HOWPUBLISHED= {http://www.llnl.gov/icc/lc/dpcs/dpcs\_overview.html},
+    YEAR        = {2002},
 }
 
 @MISC
 {
     Etnus2002, 
-    AUTHOR    = "Etnus home page",
-    TITLE     = "http://www.etnus.com",
+    AUTHOR      = {{Etnus, LLC.}},
+    TITLE       = {{Etnus Home Page}},
+    HOWPUBLISHED= {http://www.etnus.com},
+    YEAR        = {2003},
 }
 
 @MISC
 {
     Globus2002, 
-    AUTHOR    = "The Globus Project (2003)",
-    TITLE     = "http://www.globus.org",
+    AUTHOR      = {{The Globus Project}},
+    TITLE       = {{The Globus Project}},
+    HOWPUBLISHED= {http://www.globus.org},
+    YEAR        = {2003}, 
 }
 
 @MISC
 {
     GPL2002, 
-    AUTHOR    = "The GNU Project (2003)",
-    TITLE     = "http://www.gnu.org/licenses/licenses.html",
+    AUTHOR      = {{The GNU Project}},
+    TITLE       = {{The GNU Public License}},
+    HOWPUBLISHED= {http://www.gnu.org/licenses/licenses.html},
+    YEAR        = {2003},
 }
 
 @CONFERENCE
 {
     Jackson2001, 
-    AUTHOR    = "{Jackson, D.} and {Q. Snell} and {M. Clement}",
-    TITLE     = "{``Core Algorithms of the Maui Scheduler''}",
-    BOOKTITLE = "Job Scheduling Stategies for Parallel Processing",
-    ADDRESS   = "7th International Workshop, JSSPP 2001, 
-                 Cambridge, MA, June 16, 2001. 
-                 Edited by D.G. Feitelson, L. Rudolph and U. Schwiegelshohn,
-                 (Springer, New York; Berlin, 2001)
-                 LLCS vol. 2221,
-                 87-102",
+    AUTHOR    = {Dave Jackson and Q. Snell and M. Clement},
+    TITLE     = {Core Algorithms of the {M}aui {S}cheduler},
+    BOOKTITLE = {Job Scheduling Stategies for Parallel Processing},
+    VOLUME    = {2221},
+    PAGES     = {87-102},
+    ADDRESS   = {7th International Workshop, JSSP 2001, Cambridge, MA}, 
+    YEAR      = {2001},
+}
+
+@CONFERENCE
+{
+    Jackson2001ed, 
+    AUTHOR    = {Dave Jackson and Q. Snell and M. Clement},
+    TITLE     = {Core Algorithms of the {M}aui {S}cheduler},
+    BOOKTITLE = {Job Scheduling Stategies for Parallel Processing},
+    EDITOR    = {D. G. Feitelson and L. Rudolph and U. Schwiegelshohn},
+    VOLUME    = {2221},
+    PAGES     = {87-102},
+    ADDRESS   = {Cambridge, MA}, 
+    YEAR      = {2001},
 }
 
 @MISC
 {
     Jette2002, 
-    AUTHOR      = "{Jette, M.} and others",
-    TITLE       = "{Survey of Batch/Resource Management Related System Software}",
-    NOTE        = "Lawrence Livermore National Laborary, 2002 (unpublished)",
+    AUTHOR      = {Moe A. Jette and others},
+    TITLE       = {{Survey of Batch/Resource Management Related System Software}},
+    HOWPUBLISHED= {{Lawrence Livermore National Laboratory}},
+    YEAR	= {2002},
+    NOTE        = {(unpublished)},
 }
 
 @MISC
 {
     LL2002, 
-    AUTHOR = "IBM ``LoadLeveler''",
-    TITLE  = "\linebreak http://www-1.ibm.com/servers/eserver/pseries/library/sp\_books/loadleveler.html"
+    AUTHOR      = {{IBM}}, 
+    TITLE       = {{LoadLeveler -- Efficient job scheduling and management}},
+    HOWPUBLISHED= {\linebreak http://www-1.ibm.com/servers/eserver/pseries/library/sp\_books/loadleveler.html},
+    YEAR        = {2003},
 }
 
 @MISC
 {
     Maui2002, 
-    AUTHOR = "Maui Scheduler",
-    TITLE  = "http://mauischeduler.sourceforge.net/",
+    AUTHOR      = {{Maui Scheduler}},
+    TITLE       = {{Maui Scheduler}},
+    HOWPUBLISHED= {http://mauischeduler.sourceforge.net},
+    YEAR        = {2003},
 }
 
 @MISC
 {
     Quadrics2002, 
-    AUTHOR = "Quadrics Ltd.",
-    TITLE  = "{``Resource Management System,'' http://www.quadrics.com/}",
+    AUTHOR      = {{Quadrics Ltd.}},
+    TITLE       = {{Resource Management (RMS)}},
+    HOWPUBLISHED= {http://www.quadrics.com/},
+    YEAR        = {2003},
 }
 
 @MISC
 {
     SLURM2003, 
-    AUTHOR    = "Lawrence Livermore National Laborary (2003)",
-    TITLE     = "{``SLURM Simple Linux Utility for Resource Management,'' 
-                  http://www.llnl.gov/linux/slurm/}",
+    AUTHOR      = {{Lawrence Livermore National Laboratory}},
+    TITLE       = {{SLURM: Simple Linux Utility for Resource Management}},
+    HOWPUBLISHED= {http://www.llnl.gov/linux/slurm/},
+    YEAR        = {2003},
 }
 
 @CONFERENCE
 {
     STORM2001, 
-    AUTHOR    = "{Frachtenberg, E.} and others",
-    TITLE     = "{``STORM: Lightning-Fast Resource Management''}",
-    BOOKTITLE = "Proceedings of SuperComputing 2002",
-    ADDRESS   = "(Baltimore, MD, November 2002)",
-    NOTE      = "Available from 
-                 http://www.cs.huji.ac.il/$\sim$etcs/papers/sc02.pdf",
+    AUTHOR    = {E. Frachtenberg and others},
+    TITLE     = {STORM: Lightning-Fast Resource Management},
+    BOOKTITLE = {Proceedings of SuperComputing 2002},
+    ADDRESS   = {Baltimore, MD}, 
+    YEAR      = {2002},
+    NOTE      = {Available from http://www.cs.huji.ac.il/$\sim$etcs/papers/sc02.pdf},
 }
