--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -32,7 +32,7 @@
 % http://www.springer.de/comp/lncs/authors.html
 
 
-\documentclass[10pt,onecolumn,times]{../common/llncs}
+\documentclass[10pt,onecolumn,times]{llncs}
 
 \usepackage{verbatim,moreverb}
 \usepackage{float}
