o forgot double brackets around titles

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -56,7 +56,7 @@
 {
     Jackson2001, 
     AUTHOR    = {Dave Jackson and Q. Snell and M. Clement},
-    TITLE     = {Core Algorithms of the {M}aui {S}cheduler},
+    TITLE     = {{Core Algorithms of the Maui Scheduler}},
     BOOKTITLE = {Job Scheduling Stategies for Parallel Processing},
     VOLUME    = {2221},
     PAGES     = {87-102},
@@ -64,18 +64,6 @@
     YEAR      = {2001},
 }
 
-@CONFERENCE
-{
-    Jackson2001ed, 
-    AUTHOR    = {Dave Jackson and Q. Snell and M. Clement},
-    TITLE     = {Core Algorithms of the {M}aui {S}cheduler},
-    BOOKTITLE = {Job Scheduling Stategies for Parallel Processing},
-    EDITOR    = {D. G. Feitelson and L. Rudolph and U. Schwiegelshohn},
-    VOLUME    = {2221},
-    PAGES     = {87-102},
-    ADDRESS   = {Cambridge, MA}, 
-    YEAR      = {2001},
-}
 
 @MISC
 {
@@ -127,7 +115,7 @@
 {
     STORM2001, 
     AUTHOR    = {E. Frachtenberg and others},
-    TITLE     = {STORM: Lightning-Fast Resource Management},
+    TITLE     = {{STORM: Lightning-Fast Resource Management}},
     BOOKTITLE = {Proceedings of SuperComputing 2002},
     ADDRESS   = {Baltimore, MD}, 
     YEAR      = {2002},
