Change UCRL number in document.

--- a/trunk/doc/clusterworld/report.tex
+++ b/trunk/doc/clusterworld/report.tex
@@ -67,7 +67,7 @@
 % couple of macros for the title page and document
 \def\ctit{SLURM: Simple Linux Utility for Resource \linebreak
 Management}
-\def\ucrl{UCRL-MA-147996 REV 3}
+\def\ucrl{UCRL-JC-147996 REV 1}
 \def\auth{Morris Jette \\ Mark Grondona}
 \def\pubdate{June 23, 2003}
 \def\journal{ClusterWorld Conference and Expo}
