--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -1,6 +1,6 @@
 \." $Id$
 .\"
-.TH SRUN "1" "March 2003" "srun 0.1" "slurm components"
+.TH SRUN "1" "May 2003" "srun 0.1" "slurm components"
 .SH "NAME"
 srun \- run parallel jobs
 .SH SYNOPSIS
@@ -87,6 +87,11 @@ will not allocate more than one process per cpu. By specifying
 \fB\-\-overcommit\fR you are explicitly allowing more than one process
 per cpu. However no more than \fBMAX_TASKS_PER_NODE\fR tasks are 
 permitted to execute per node.
+.TP
+\fB\-P\fR, \fB\-\-priority\fR=\fIprio\fR
+Specify the priority at which the job should execute. This may 
+only be used to set the priority of a job to zero (which places 
+the job in a held state) unless the request is issued by user root.
 .TP
 \fB\-T\fR, \fB\-\-threads\fR=\fInthreads\fR
 Request that 
