Change --priority option to --hold

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -89,10 +89,9 @@ per cpu. However no more than \fBMAX_TASKS_PER_NODE\fR tasks are
 permitted to execute per node.
 ./"NOTE: Do not document feature until user release mechanism is available.
 ./".TP
-./"-P, --priority=prio
-./"Sepcify the priority at which the job should execute. This may
-./"only be used to set the priority of a job to zero (which places 
-./"the job in a held state) unless the request is issued by user root.
+./"-H, --hold
+./"Specify the job is to be submitted in a held state (priority of zero).
+./"A held job can now be released using scontrol to reset its priority.
 .TP
 \fB\-T\fR, \fB\-\-threads\fR=\fInthreads\fR
 Request that 
