Update Maui scheduler web site pointer.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -89,7 +89,7 @@
     Maui2002, 
     AUTHOR      = {{Maui Scheduler}},
     TITLE       = {{Maui Scheduler}},
-    HOWPUBLISHED= {http://mauischeduler.sourceforge.net},
+    HOWPUBLISHED= {http://supercluster.org/maui},
     YEAR        = {2003},
 }
 
