--- a/trunk/doc/jsspp/references.bib
+++ b/trunk/doc/jsspp/references.bib
@@ -193,7 +193,7 @@ ogrammed {M}ultiprocessors",
 	note = "{\tt oss.sgi.com/projects/pagg}"}
 @misc{Maui,
 	author = "{Maui Scheduler}",
-	note = "{\tt mauischeduler.sourceforge.net}"}
+	note = "{\tt http://supercluster.org/maui}"}
 @misc{DPCS,
 	author = "{Distributed Production Control System}",
 	note = "{\tt http://www.llnl.gov/icc/lc/dpcs\_overview.html}"}
