--- a/trunk/doc/survey/report.tex
+++ b/trunk/doc/survey/report.tex
@@ -105,7 +105,7 @@ of some frustration.
 
 \section{Maui}
 
-Maui Scheduler\footnote{http://mauischeduler.sourceforge.net/}
+Maui Scheduler\footnote{http://supercluster.org/maui}
 is an advance reservation HPC batch scheduler for use with SP, 
 O2K, and UNIX/Linux clusters. It is widely used to extend the 
 functionality of PBS and LoadLeveler
