Fix typo "insure that a a job" -> "insure that a job".

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -1,6 +1,6 @@
 \." $Id$
 .\"
-.TH SRUN "1" "May 2003" "srun 0.1" "slurm components"
+.TH SRUN "1" "June 2003" "srun 0.1" "slurm components"
 .SH "NAME"
 srun \- run parallel jobs
 .SH SYNOPSIS
@@ -181,7 +181,7 @@ the job.
 \fB\-W\fR, \fB\-\-wait\fR=\fIseconds\fR
 Specify how long to wait after the first task terminates before terminating 
 all remaining tasks. The default value is unlimited. This can be useful to 
-insure that a a job is terminated in a timely fashion in the event that one 
+insure that a job is terminated in a timely fashion in the event that one 
 or more tasks terminate prematurely.
 .PP
 Allocate options:
