--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -67,7 +67,8 @@ if not yet established or "UNLIMITED" for no limit.
 .br
 \fB%m\fR Minimum size of memory (in MB) requested by the job
 .br
-\fB%M\fR Time used by the job in hours:minutes
+\fB%M\fR Time used by the job in days:hours:minutes:seconds. 
+The days and hours are printed only as needed.
 .br
 \fB%n\fR List of node names explicitly requested by the job
 .br
@@ -159,9 +160,9 @@ Print the job steps in the debug partition sorted by user:
 .br
  65552.1    debug       alice         0:23 dev[1-4]
 .br
- 65562.2    debug       bob           0.18 dev22
+ 65562.2    debug       bob           0:18 dev22
 .br
- 65550.1    debug       candice     143:21 dev[6-12]
+ 65550.1    debug       candice    1:43:21 dev[6-12]
 .ec
 
 .eo
@@ -175,7 +176,7 @@ Print information only about jobs 12345 and 12346:
 .br
   12345 debug     pwd  david  R       0:21      4 dev[9-12]
 .br
-  12346 debug     pwd  david  PD         0      0
+  12346 debug     pwd  david  PD      0:00      0
 .ec
 
 .eo
