Correct default job states reported. Add completing to running and pending.

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -120,7 +120,8 @@ Note that sorting is not supported for all fields at this time.
 \fB\-t\fR, \fB\-\-states\fR
 Specify the states of jobs to view.  Accepts a comma separated list of
 state names or "all". If "all" is specified then jobs of all states will be 
-reported. If no state is specified, pending and running jobs are reported.
+reported. If no state is specified then pending, running, and completing
+ jobs are reported.
 .TP
 \fB\-u\fR, \fB\-\-users\fR
 Specifies a comma separated list of users whose jobs or job steps are to be
